hpa/production_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-production
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-production
  template:
    metadata:
      labels:
        app: svc-production
    spec:
      containers:
        - name: svc-production
          image: 211.183.3.100/web/production:2.0
          ports:
           - containerPort: 80
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 15m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-production
  namespace: web
spec:
  type: NodePort
  selector:
    app: svc-production
  ports:
    - port: 80
      targetPort: 80
